--- a/core/templates/atracoes.html
+++ b/core/templates/atracoes.html
@@ -4,7 +4,7 @@
 
       <div class="section-title" data-aos="fade-up">
         <h2>Atrações</h2>
-        <p>Para seguir a tradição de uma boa cavalgada em solo mineiro, não pode faltar música e gastronomia</p>
+        <p>Na tradição de uma boa cavalgada em solo mineiro, não pode faltar música e gastronomia</p>
       </div>
 
       <div class="row">
