--- a/core/templates/contato.html
+++ b/core/templates/contato.html
@@ -13,7 +13,7 @@
             <div class="address">
               <i class="bi bi-geo-alt"></i>
               <h4>Localização:</h4>
-              <p>Av. Coronel Custódio Alvarenga<br>Capim Branco/MG</p>
+              <p>Av. Coronel Custódio Alvarenga - Centro<br>Capim Branco/MG</p>
             </div>
 
             <div class="email">
