--- a/core/templates/portfolio-details1.html
+++ b/core/templates/portfolio-details1.html
@@ -97,7 +97,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Muita gente bonita com uma belíssima paisagem</h2>
+              <h2>A amizade foi celebrada!</h2>
               <p>
                 A cidade de Capim Branco recebeu com muita alegria esse evento de cavalgada e cultura caipira. O clima estava ótimo !
               </p>
