--- a/core/templates/portfolio-details2.html
+++ b/core/templates/portfolio-details2.html
@@ -98,7 +98,7 @@
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>Nada se compara à tranquilidade e ao ar puro do campo</h2>
+              <h2>Tranquilidade e ar puro</h2>
               <p>
                 O distrito de Mocambeiro/MG estava em festa. Nunca vimos tantos cavalos árabes reunidos em um só lugar. Coisa mais linda!
               </p>
