--- a/core/templates/racas.html
+++ b/core/templates/racas.html
@@ -37,7 +37,7 @@
             <li class="nav-item">
               <a class="nav-link active show" data-bs-toggle="tab" href="#tab-1">
                 <h4>Manga Larga Marchador</h4>
-                <p>Uma das raças mais conhecidas e procuradas.</p>
+                <p>Uma das raças mais conhecidas.</p>
               </a>
             </li>
             <li class="nav-item mt-2">
