autocomplete OFF no envio de email

--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -19,7 +19,7 @@
 
         <div class="row footer-newsletter justify-content-center">
           <div class="col-lg-6">
-            <form id="contato" action="{% url 'index' %}" method="post">
+            <form id="contato" action="{% url 'index' %}" method="post" autocomplete="off">
               {% csrf_token %}
               <input type="email" id="email" name="email" placeholder="Digite o seu e-mail"><input type="submit" value="Enviar">
             </form>
